test/sema/assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn bar(): number { return 1.0; }

fn main(): void {
    var x: number = 1.0;

    // CHECK: [[# @LINE + 1 ]]:12: error: an expression of type 'void' cannot be assigned to a variable of type 'number'
    x = foo();

    let y: number = 3.0;
    
    y = 3.0;

    // CHECK: [[# @LINE + 1 ]]:11: error: an expression of type 'number' cannot be assigned to a variable of type '() -> number'
    bar = 3.0;

    // CHECK: [[# @LINE + 1 ]]:11: error: an expression of type 'number' cannot be assigned to a variable of type '() -> void'
    foo = 3.0;

    let z: number;
    z = 3.0;
}

fn assignParam(x: number): void {
    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 1.0;
}
